# A_prototype_MPEG-G_encoder

./: AccessUnit.cpp  AccessUnit.h  AccessUnitBlock.cpp  AccessUnitBlock.h  AccessUnit_HM.cpp  AccessUnit_HM.h  AccessUnit_I.cpp  AccessUnit_I.h  AccessUnit_M.cpp  AccessUnit_M.h  AccessUnit_N.cpp  AccessUnit_N.h  AccessUnit_P.cpp  AccessUnit_P.h  AccessUnit_U.cpp  AccessUnit_U.h  CMakeLists.txt  FileManager.cpp  FileManager.h  Mpegg  MpeggRecord.h  README.md  Utils.cpp  Utils.h  main.cpp  mpegg
Files/: .mpegg.ipair  .mpegg.ircomp  .mpegg.irlen  .mpegg.mmmpos  .mpegg.mpair  .mpegg.mrcomp  .mpegg.mrlen  .mpegg.nmmpos  .mpegg.npair  .mpegg.pair  .mpegg.pos  9827_2#49.mpegg  9827_2#49.mpegg.flags  9827_2#49.mpegg.iclips  9827_2#49.mpegg.iflags  9827_2#49.mpegg.immpos  9827_2#49.mpegg.immtype  9827_2#49.mpegg.ipair  9827_2#49.mpegg.ipos  9827_2#49.mpegg.ircomp  9827_2#49.mpegg.irlen  9827_2#49.mpegg.mflags  9827_2#49.mpegg.mmmpos  9827_2#49.mpegg.mmmtype  9827_2#49.mpegg.mpair  9827_2#49.mpegg.mpos  9827_2#49.mpegg.mrcomp  9827_2#49.mpegg.mrlen  9827_2#49.mpegg.nflags  9827_2#49.mpegg.nmmpos  9827_2#49.mpegg.npair  9827_2#49.mpegg.npos  9827_2#49.mpegg.nrcomp  9827_2#49.mpegg.nrlen  9827_2#49.mpegg.pair  9827_2#49.mpegg.pos  9827_2#49.mpegg.rcomp  9827_2#49.mpegg.rlen
Scripts/: ERRORES.txt  classI_mmpos_compare.py  classI_pair_compare.py  classI_pos_compare.py  classI_pos_compare.py.save  classI_rcomp_compare.py  classI_sclips_compare.py  classM_pair_compare.py  classM_pos_compare.py  classM_rcomp_compare.py  classN_mmpos_compare.py  classN_pair_compare.py  classN_pos_compare.py  classN_rcomp_compare.py  classP_pair.py  classP_pair_compare.py  classP_pos.py  classP_pos_compare.py  classP_rcomp.py  classP_rcomp_compare.py
html/: AccessUnitBlock_8h.html  AccessUnitBlock_8h__dep__incl.dot  AccessUnitBlock_8h__dep__incl.map  AccessUnitBlock_8h__dep__incl.md5  AccessUnitBlock_8h__incl.map  AccessUnitBlock_8h__incl.md5  AccessUnitBlock_8h_source.html  AccessUnit_8h.html  AccessUnit_8h__dep__incl.dot  AccessUnit_8h__dep__incl.map  AccessUnit_8h__dep__incl.md5  AccessUnit_8h__incl.dot  AccessUnit_8h__incl.map  AccessUnit_8h__incl.md5  AccessUnit_8h_source.html  AccessUnit__HM_8h.html  AccessUnit__HM_8h__dep__incl.dot  AccessUnit__HM_8h__dep__incl.map  AccessUnit__HM_8h__dep__incl.md5  AccessUnit__HM_8h__incl.map  AccessUnit__HM_8h__incl.md5  AccessUnit__HM_8h_source.html  AccessUnit__I_8h.html  AccessUnit__I_8h__dep__incl.dot  AccessUnit__I_8h__dep__incl.map  AccessUnit__I_8h__dep__incl.md5  AccessUnit__I_8h__incl.dot  AccessUnit__I_8h__incl.map  AccessUnit__I_8h__incl.md5  AccessUnit__I_8h_source.html  AccessUnit__M_8h.html  AccessUnit__M_8h__dep__incl.dot  AccessUnit__M_8h__dep__incl.map  AccessUnit__M_8h__dep__incl.md5  AccessUnit__M_8h__incl.dot  AccessUnit__M_8h__incl.map  AccessUnit__M_8h__incl.md5  AccessUnit__M_8h_source.html  AccessUnit__N_8h.html  AccessUnit__N_8h__dep__incl.dot  (+130 more)
latex/: AccessUnitBlock_8h.tex  AccessUnitBlock_8h__dep__incl.dot  AccessUnitBlock_8h__dep__incl.md5  AccessUnitBlock_8h__incl.md5  AccessUnit_8h.tex  AccessUnit_8h__dep__incl.dot  AccessUnit_8h__dep__incl.md5  AccessUnit_8h__incl.dot  AccessUnit_8h__incl.md5  AccessUnit__HM_8h.tex  AccessUnit__HM_8h__dep__incl.dot  AccessUnit__HM_8h__dep__incl.md5  (+75 more)
(+47 files in other folders)
